# FlintLauncher

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  svelte.config.js  vite.config.js
src/: app.css  app.html
src-tauri/: Cargo.toml  bundle-java.js  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: launchprocess.rs  lib.rs  library.rs  libraryManagement.rs  main.rs  updater.rs  window_manager.rs
src-tauri/src/launchprocess/: classpathBuilder.rs  gameSpawning.rs  javaDiscovery.rs  mod.rs
src/components/: NavBar.svelte
src/lib/: traySetup.ts
src/lib/components/: BootstrapScreen.svelte  UpdateNotifier.svelte
src/lib/stores/: downloadStore.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/account/: +page.svelte
src/routes/account/addAccount/: +page.svelte
src/routes/account/manageProfile/: +page.svelte
src/routes/settings/: +page.svelte
src/stores/: downloadStore.ts
